// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Floor exists 1`] = `
<Floor
  currentLevel={1}
  firstLevel={false}
  lastLevel={false}
  level={1}
>
  <div>
    <span
      className="active"
    >
      Floor 
      1
    </span>
    <Component
      downButton={true}
      upButton={true}
    >
      <ul>
        <button>
          Up
        </button>
        <button>
          Down
        </button>
      </ul>
    </Component>
  </div>
</Floor>
`;

exports[`Floor is at the first level 1`] = `
<Floor
  currentLevel={1}
  firstLevel={true}
  lastLevel={false}
  level={1}
>
  <div>
    <span
      className="active"
    >
      Floor 
      1
    </span>
    <Component
      downButton={false}
      upButton={true}
    >
      <ul>
        <button>
          Up
        </button>
      </ul>
    </Component>
  </div>
</Floor>
`;

exports[`Floor is at the last level 1`] = `
<Floor
  currentLevel={1}
  firstLevel={false}
  lastLevel={true}
  level={1}
>
  <div>
    <span
      className="active"
    >
      Floor 
      1
    </span>
    <Component
      downButton={true}
      upButton={false}
    >
      <ul>
        <button>
          Down
        </button>
      </ul>
    </Component>
  </div>
</Floor>
`;
